name:                welshy
version:             0.1.0.0
synopsis:            Haskell web framework (because Scotty had trouble yodeling)
-- description:
license:             MIT
license-file:        LICENSE
author:              Michael Schröder
maintainer:          mcschroeder@gmail.com
copyright:           (c) 2013 Michael Schröder
category:            Web
build-type:          Simple
cabal-version:       >=1.8

extra-source-files:
  example.hs

library
  exposed-modules:  Web.Welshy
  other-modules:    Web.Welshy.Action,
                    Web.Welshy.FromText,
                    Web.Welshy.Request,
                    Web.Welshy.Response
  build-depends:
      base ==4.6.*
    , aeson ==0.6.*
    , blaze-builder ==0.3.*
    , bytestring ==0.10.*
    , conduit ==1.0.*
    , http-types ==0.8.*
    , lifted-base ==0.2.*
    , resourcet ==0.4.*
    , text ==0.11.*
    , transformers ==0.3.*
    , unordered-containers ==0.2.*
    , wai ==1.4.*
    , warp ==1.3.*  
  
  extensions:
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
